Add profile.html and profile link to index

--- a/profile.html
+++ b/profile.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html"></a>
-    
-    <img src="662115025.jpg" alt="">
+    <a href="index.html"></a>
+    <p>Eakkasit Nimanussornkul</p>
 </body>
 </html>
