--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="index.html"></a>
-    <p>Eakkasit Nimanussornkul</p>
+    <p>Teeranate Thotharat 662115025</p>
 </body>
 </html>
