added friend profile

--- a/friendprofile.html
+++ b/friendprofile.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html">profile</a><br>
-    <a href="friendprofile.html">Friend Profile</a><br>
-    <img src="662115025.jpg" alt=""><br>
+    Muanpee Thising 662115053
 </body>
 </html>
