--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html"></a>
-    
-    <img src="662115025.jpg" alt="">
+    <a href="profile.html">profile</a>
+    <img src="friendimage.png" alt="">
 </body>
 </html>
